[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ludvig"
version = "0.8.2"
authors = [{ name = "Frode Hus", email = "frode@frodehus.dev" }]
description = "A simple vulnerability scanner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cyclonedx-python-lib == 4.0.1',
    'packageurl-python==0.11.1',
    'requests==2.31.0',
    'yara-python==4.3.1',
    'knack==0.10.1',
    'jschema_to_python==1.2.3',
    'sarif_om==1.0.4',
    'urllib3==2.0.6',
    'python-dateutil==2.8.2',
    'defusedxml==0.7.1',
]


[project.scripts]
ludvig = "ludvig.__main__:main"


[project.urls]
"Homepage" = "https://github.com/frodehus/ludvig"
"Bug Tracker" = "https://github.com/frodehus/ludvig/issues"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
[tool.bumpver]
current_version = "0.8.2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"ludvig/__init__.py" = ["{version}"]
